# ros2-simulation

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  docker-compose.yml
.claude/: settings.local.json
backend/: Dockerfile  go.mod
backend/cmd/server/: main.go
backend/internal/config/: config.go
backend/internal/handler/: chat.go  robot.go  task.go  util.go  websocket.go
backend/internal/model/: robot.go  task.go
backend/internal/repository/: robot.go  task.go
backend/internal/rosbridge/: client.go  ws_client.go
backend/internal/service/: llm.go  robot.go  rosbridge.go  task.go
backend/migrations/: 001_create_robots.sql  002_create_locations.sql  003_create_tasks.sql  004_create_task_logs.sql
docs/: demo-script.md  design-decisions.md
frontend/: Dockerfile  package-lock.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: Navigation.tsx  RobotMap.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  types.ts  websocket.ts
infra/docker/: ros2.Dockerfile  ros2_entrypoint.sh
ros2_ws/src/robotasker_core/: package.xml  setup.cfg  setup.py
ros2_ws/src/robotasker_core/config/: locations.yaml
ros2_ws/src/robotasker_core/launch/: robotasker.launch.py
ros2_ws/src/robotasker_core/robotasker_core/: bridge_node.py  navigation_controller.py  task_executor_node.py
ros2_ws/src/robotasker_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/robotasker_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/robotasker_sim/launch/: simulation.launch.py
ros2_ws/src/robotasker_sim/worlds/: office.world
scripts/: demo.sh  seed.sql  setup.sh
(+5 files in other folders)
