<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotasker_core</name>
  <version>0.1.0</version>
  <description>RoboTasker コアノード群</description>
  <maintainer email="takaki@example.com">takaki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>robotasker_msgs</depend>

  <exec_depend>rosbridge_suite</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
