<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotasker_sim</name>
  <version>0.1.0</version>
  <description>RoboTasker Gazebo シミュレーション環境</description>
  <maintainer email="takaki@example.com">takaki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>robotasker_core</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
